# pytest_covid

./: pyproject.toml  pytest.ini  readme.md
pytest_covid/: __init__.py
tests/: test_covid.py
